# rest-c

./: .gitignore  Makefile.am  NOTICE  README.md  cacert.pem  configure.ac  cprest.pc.in
basic_example/: Makefile.am  basic_example.c  basic_example_json.c
src/: Makefile.am  cp_constants.h  cp_internals.c  cp_internals.h  cp_rest.c  cp_rest.h  cp_rest_json.c  cp_rest_json.h
